--- a/19th_August_Python_Basics.ipynb
+++ b/19th_August_Python_Basics.ipynb
@@ -233,13 +233,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "1de519da-8264-45c5-83f0-ecf7d40e4230",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter your word :  nitin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "k = input(\"enter your word : \")\n",
-    "c = k==k[::-1]"
+    "c = k==k[::-1]\n",
+    "\n",
+    "c"
    ]
   },
   {
@@ -249,6 +269,45 @@
    "source": [
     "String based - Question 5"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "11dc1fcc-2334-43c5-9867-db2fd76a804b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter your sentence :  i have three gulab jamuns\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'ihavethreegulabjamuns'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = input ('enter your sentence : ')\n",
+    "z = y.replace(\" \",\"\")\n",
+    "\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97710771-8ec8-44ab-be5f-ef839ee36633",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
